# AsciiDoctorArtisan

./: .claude.json  .codeclimate.yml  .editorconfig  .gitignore  .mutmut_config.py  .pre-commit-config.yaml  .pylintrc  .ruff.toml  ALIGNMENT_SCORECARD.md  ANTHROPIC_REMOVAL_SUMMARY.md  ASYNC_TEST_REFACTORING_REQUIREMENTS.md  AsciiDocArtisan.json  AsciiDocArtisanVerify.ps1  CHANGELOG.md  CHAT_COMPLETION_REPORT.md  CHAT_INTEGRATION_TEST_FIX.md  CLAUDE.md  CLAUDE_CHAT_VALIDATION.md  CLAUDE_MIGRATION_GUIDE.md  CODE_OF_CONDUCT.md  COMMIT_CHANGES.sh  COMMIT_INSTRUCTIONS.md  CONFIG.md  CONTRIBUTING.md  CONVERSION_TEST_GUIDE.md  COVERAGE_ANALYSIS_SUMMARY.md  COVERAGE_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DEEP_CODE_ANALYSIS_v1.4.0.md  DEPENDENCIES_INSTALLED.md  DEPENDENCY_UPDATE_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  EXPORT_FORMATS_GUIDE.adoc  EXPORT_FORMATS_GUIDE.docx  EXPORT_FORMATS_GUIDE.md  FAQ.md  FINAL_READABILITY_SCORECARD.md  FINAL_SCORECARD.md  (+136 more)
.claude/: PROJECT_STATE.md  README.md  config.json  settings.json  statusline.sh
.claude/plans/: lsp-enhancements-plan.md  refactoring-plan.md
.claude/skills/: QUICK_REFERENCE.md  README.md  aliases.sh  grandmaster-techwriter.md  manifest.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: EXAMPLE_OUTPUT.md  README.md  SECURITY_QUICK_REFERENCE.md  SECURITY_SCANNING.md  TEST_SECURITY_WORKFLOW.md  ci.yml  claude-code-review.yml  performance.yml  pylint.yml  security-scan.yml  security.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
.specify/: README.md  SPECIFICATION_COMPLETE.md
.specify/memory/: constitution.md
.specify/specs/: SPECIFICATION.md  SPECIFICATION_ANALYSIS.md  SPECIFICATION_SIMPLE.md  SPEC_UPDATES_v1.1.md  data-model.md  implementation-plan.md  project-specification-KISS.md  project-specification.md
archive/session_nov18/: DEFERRED_WORK_AND_SKIPPED_TESTS.md  IMMEDIATE_ACTIONS_CHECKLIST.md  README.md  SESSION_FINAL_SUMMARY.md  SESSION_NOV18_FINAL_STATUS.md  SESSION_NOV18_PHASE4G_COMPLETE.md  TEST_RESULTS_NOV18.md  TEST_RESULTS_PHASE4G.md  WORK_SESSION_COMPLETE.md
asciidoc_artisan/: __init__.py
asciidoc_artisan/core/: __init__.py  models.py  resource_monitor.py  settings.py
asciidoc_artisan/ui/: __init__.py  dialogs.py  main_window.py  menu_manager.py  settings_manager.py  theme_manager.py
asciidoc_artisan/workers/: __init__.py  git_worker.py  pandoc_worker.py
assets/: asciidoc-artisan.desktop
claude-integration/: .env.example  README.md  package.json  server.js
coverage_reports/: summary_20251028_124440.txt
docs/: ANALYSIS_AND_MVP_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  ASYNC_TEST_FIX_PLAN.md  COVERAGE_ROADMAP.md  CRITICAL_FINDINGS.md  CROSS_PLATFORM.md  DEFERRED_WORK_AND_SKIPPED_TESTS.md  DELIVERABLES_SUMMARY.md  DEVELOPER_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_STANDARDS.md  GITHUB_CLI_INTEGRATION.md  INDEX.md  INSTALL.md  INSTALLATION_COMPLETE.md  NEXT_STEPS.md  OLLAMA_CHAT_GUIDE.md  OLLAMA_INTEGRATION.md  OLLAMA_SETUP.md  OPTIMIZATION_REPORT.md  P0_TEST_FIXES_SUMMARY.md  PANDOC_INTEGRATION.md  PANE_MAXIMIZE_GUIDE.docx  PANE_MAXIMIZE_GUIDE.html  PROJECT_OVERVIEW.md  PYTHON_OO_OPTIMIZATION.md  QA_EXECUTIVE_SUMMARY.md  QA_GRANDMASTER_AUDIT_2025.md  QT_THREADING_INVESTIGATION.md  QUICK_START.md  README.md  REFACTORING_PLAN_main_window.md  RELEASE_NOTES_v1.0.0-beta.md  RELEASE_NOTES_v2.0.8.md  RELEASE_NOTES_v2.0.9.md  RELEASE_NOTES_v2.1.0.md  ROADMAP_RATIONALIZATION.md  SCHEMAS.md  SECURITY_ANALYSIS_v1.1.md  (+30 more)
docs/architecture/: ARCHITECTURAL_ANALYSIS_2025.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REFERENCE.md  SPECIFICATIONS.md  v1.6.0_PERFORMANCE_SUMMARY.md
docs/archive/: ARCHITECTURAL_REFACTORING.md  AUTONOMOUS_MODE_ENABLED.md  CHAT_COMPLETION_REPORT.md  CHAT_INTEGRATION_SUMMARY.md  CHAT_TESTING_SUMMARY.md  CLAUDE_CHAT_VALIDATION.md  CLEANUP_SUMMARY.md  CONSOLIDATION_AUDIT_v1.7.3.md  CONSOLIDATION_SUMMARY.md  CONTEXT_MODES_TEST_REPORT.md  COVERAGE_ANALYSIS_SUMMARY.md  DEVELOPMENT_SUMMARY.md  DOCUMENTATION_OPTIMIZATION_PLAN.md  INSTALLATION_VALIDATOR_v1.7.4.md  OPTION_B_COMPLETION_SUMMARY.md  PHASE3_ASSESSMENT.md  PHASE_1_2_PROGRESS.md  (+32 more)
images/: README.md
openspec/: README.md
scripts/: README.md  add_fr_status_markers.py  add_implementation_refs.py  add_test_requirements.py  analyze_architecture_gaps.py  analyze_coverage.py  analyze_fr_gaps.py  analyze_hu_misalignments.py  analyze_ma_compliance.py  analyze_ma_violations.py  analyze_ma_violations_docs.py  analyze_security_audit.py  analyze_test_quality.py  audit_fr_test_mapping.py  benchmark_predictive_rendering.py  check_readability.py  check_traceability.py  demo_security_audit.py  measure_startup_time.py  memory_profile.py  merge_gpu_tests.py  profile_imports.py  readability_check.py  remove_old_settings_methods.py  score_all_docs.py  techwriter  tw  validate-specifications.sh
specs/: DESIGN.md  REQUIREMENTS.md  TASK.md
src/: adp_windows.py  claude_client.py  document_converter.py  main.py  pandoc_integration.py
templates/: README.md
tests/: README.md  conftest.py  test_action_manager.py  test_adaptive_debouncer.py  test_api_key_dialog.py  test_async_file_handler.py  test_async_file_ops.py  test_async_file_watcher.py  test_chat_bar_widget.py  test_chat_manager.py  test_claude_chat_integration.py  test_claude_client.py  test_constants.py  test_dialog_manager.py  test_dialogs.py  test_editor_state.py  test_export_manager.py  test_file_handler.py  test_file_load_manager.py  test_file_operations.py  test_file_operations_manager.py  test_git_worker.py  test_github_cli_worker.py  test_github_dialogs_old.py  test_github_handler.py  test_gpu_cache.py  test_gpu_detection.py  test_grammar_config.py  test_grammar_models.py  test_grammar_workers.py  test_hardware_detection.py  test_incremental_renderer.py  test_large_file_handler.py  test_lazy_importer.py  test_lazy_utils.py  test_line_numbers.py  test_lru_cache.py  test_memory_leaks.py  test_memory_profiler.py  test_metrics.py  (+27 more)
themes/: README.md
(+639 files in other folders)
