[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciidoc-artisan"
version = "1.7.4"
description = "A modern AsciiDoc editor with live preview and document conversion"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "webbwr", email = "webbwr@users.noreply.github.com"}
]
keywords = ["asciidoc", "editor", "documentation", "markdown", "preview", "gpu", "hardware-acceleration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: AsciiDoc",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.9.0",
    "asciidoc3>=3.2.0",
    "pypandoc>=1.13",
    "pymupdf>=1.23.0",
    "keyring>=24.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/webbwr/AsciiDoctorArtisan"
Repository = "https://github.com/webbwr/AsciiDoctorArtisan"
Issues = "https://github.com/webbwr/AsciiDoctorArtisan/issues"

[project.scripts]
asciidoc-artisan = "adp_windows:main"

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/ui/main_window.py",
    "*/ui/*_manager.py",
    "*/ui/dialogs.py",
    "*/ui/github_dialogs.py",
    "*/ui/preview_handler_base.py",
    "*/core/__init__.py"
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adp_windows"
disable_error_code = ["truthy-function", "no-any-return"]

[[tool.mypy.overrides]]
module = "asciidoc_artisan.ui.*"
disable_error_code = ["attr-defined", "call-overload", "misc", "assignment", "union-attr", "truthy-function", "var-annotated"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
