[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciidoc-artisan"
version = "2.0.9"
description = "A modern AsciiDoc editor with live preview, auto-completion, syntax checking, and document templates"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "webbwr", email = "webbwr@users.noreply.github.com"}
]
keywords = ["asciidoc", "editor", "documentation", "markdown", "preview", "gpu", "hardware-acceleration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: AsciiDoc",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.9.0",
    "asciidoc3>=3.2.0",
    "pypandoc>=1.13",
    "pymupdf>=1.23.0",
    "keyring>=24.0.0",
    "keyrings.alt>=5.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
    "ollama>=0.4.0",
    "xxhash>=3.4.0",
    "orjson>=3.10.0",
    "rapidfuzz>=3.14.0",
    "qasync>=0.28.0",
    "anthropic>=0.72.0",
    "pyspellchecker>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-forked>=1.6.0",
    "pytest-benchmark>=5.0.0",
    "pytest-regressions>=2.8.0",
    "hypothesis>=6.100.0",
    "numpy>=1.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-setuptools>=68.0.0",
    "types-aiofiles>=23.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/webbwr/AsciiDoctorArtisan"
Repository = "https://github.com/webbwr/AsciiDoctorArtisan"
Issues = "https://github.com/webbwr/AsciiDoctorArtisan/issues"

[project.scripts]
asciidoc-artisan = "adp_windows:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/ui/main_window.py",
    "*/ui/*_manager.py",
    "*/ui/dialogs.py",
    "*/ui/github_dialogs.py",
    "*/ui/preview_handler_base.py",
    "*/core/__init__.py"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adp_windows"
disable_error_code = ["truthy-function", "no-any-return"]

[[tool.mypy.overrides]]
module = "asciidoc_artisan.ui.*"
disable_error_code = ["attr-defined", "call-overload", "misc", "assignment", "union-attr", "truthy-function", "var-annotated"]

[tool.pytest.ini_options]
minversion = "7.0"
# IMPORTANT: No multiprocessing flags (--forked, -n, etc.) on macOS
# macOS Security.framework doesn't work in forked processes
# Coverage uses --cov-branch for more thorough analysis
addopts = "-ra -q --strict-markers --cov=src/asciidoc_artisan --cov-branch --cov-report=term-missing:skip-covered --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Qt/pytest-qt configuration
qt_api = "pyside6"
# Asyncio configuration (pytest-asyncio >= 0.23.0)
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Anyio configuration (use asyncio backend only, not trio)
# anyio_backends = ["asyncio"]  # Disabled: Not a pytest core option
# Environment variables for test execution
# env = [  # Disabled: Already set in tests/conftest.py
#     "QT_QPA_PLATFORM=offscreen",
#     "PYTHON_KEYRING_BACKEND=keyring.backends.null.Keyring",
# ]
# Markers for test organization
markers = [
    "unit: Unit tests for individual functions and classes",
    "integration: Integration tests with external tools (Pandoc, Git)",
    "gui: GUI tests using pytest-qt",
    "slow: Tests that take significant time to run",
    "benchmark: Performance benchmark tests (Phase 4)",
    "performance: Performance profiling and baseline tests",
    "asyncio: Async I/O tests",
    "memory: Memory leak and usage tests",
    "stress: Stress and load testing",
    "property: Property-based tests using Hypothesis (fuzz testing)",
    "visual: Visual regression tests using pytest-regressions (screenshot comparisons)",
    "timeout: Tests with timeout constraints to prevent hanging",
    "live_api: Tests requiring live API access (Claude, Ollama) - manual run only",
    "forked: Tests requiring process isolation (pytest-forked) - Qt worker thread isolation",
    "fast: Fast tests (<0.1s) - unit tests, simple mocks",
    "medium: Medium tests (0.1-1s) - moderate complexity",
    "flaky: Flaky tests that may fail intermittently (auto-retry with pytest-rerunfailures)",
    "e2e: End-to-end workflow tests",
    "bdd: Behavior-Driven Development tests using pytest-bdd and Gherkin scenarios",
    "security: Security tests (vulnerability, injection, sanitization)",
    "edge_case: Edge case and boundary condition tests",
    "requires_gpu: Tests requiring GPU hardware and Qt WebEngine libraries (libsmime3.so)",
    "requires_pandoc: Tests requiring Pandoc executable for document conversion",
    # FR markers - Functional Requirements from SPECIFICATIONS_AI.md
    "fr_001: FR-001 Text Editor",
    "fr_002: FR-002 Line Numbers",
    "fr_003: FR-003 Undo/Redo",
    "fr_004: FR-004 Font Customization",
    "fr_005: FR-005 Editor State",
    "fr_006: FR-006 Open Files",
    "fr_007: FR-007 Save Files",
    "fr_008: FR-008 Save As",
    "fr_009: FR-009 New Document",
    "fr_010: FR-010 Recent Files",
    "fr_011: FR-011 Auto-Save",
    "fr_012: FR-012 Import DOCX",
    "fr_013: FR-013 Import PDF",
    "fr_014: FR-014 Import Markdown",
    "fr_015: FR-015 Live Preview",
    "fr_016: FR-016 GPU Acceleration",
    "fr_017: FR-017 Scroll Sync",
    "fr_018: FR-018 Incremental Render",
    "fr_019: FR-019 Debounce",
    "fr_020: FR-020 Preview Themes",
    "fr_021: FR-021 Export HTML",
    "fr_022: FR-022 Export PDF",
    "fr_023: FR-023 Export DOCX",
    "fr_024: FR-024 Export Markdown",
    "fr_025: FR-025 AI Export Enhancement",
    "fr_026: FR-026 Select Repo",
    "fr_027: FR-027 Git Commit",
    "fr_028: FR-028 Git Pull",
    "fr_029: FR-029 Git Push",
    "fr_030: FR-030 Git Status Bar",
    "fr_031: FR-031 Git Status Dialog",
    "fr_032: FR-032 Quick Commit",
    "fr_033: FR-033 Cancel Git Ops",
    "fr_034: FR-034 Create PR",
    "fr_035: FR-035 List PRs",
    "fr_036: FR-036 Create Issue",
    "fr_037: FR-037 List Issues",
    "fr_038: FR-038 View Repo",
    "fr_039: FR-039 Ollama Chat Panel",
    "fr_040: FR-040 Chat Modes",
    "fr_041: FR-041 Model Selection",
    "fr_042: FR-042 Chat History",
    "fr_043: FR-043 Ollama Integration",
    "fr_044: FR-044 Status Indicator",
    "fr_045: FR-045 Find Bar",
    "fr_046: FR-046 Replace",
    "fr_047: FR-047 Search Engine",
    "fr_048: FR-048 UI Integration",
    "fr_049: FR-049 Search Performance",
    "fr_050: FR-050 Real-Time Spell Check",
    "fr_051: FR-051 Suggestions",
    "fr_052: FR-052 Custom Dictionary",
    "fr_053: FR-053 Multi-Language",
    "fr_054: FR-054 Performance",
    "fr_055: FR-055 Theme Support",
    "fr_056: FR-056 Status Bar",
    "fr_057: FR-057 Document Metrics",
    "fr_058: FR-058 Menu Structure",
    "fr_059: FR-059 Preferences Dialog",
    "fr_060: FR-060 Keyboard Shortcuts",
    "fr_061: FR-061 Accessibility",
    "fr_062: FR-062 Fast Startup",
    "fr_063: FR-063 Worker Pool",
    "fr_064: FR-064 Async I/O",
    "fr_065: FR-065 Lazy Loading",
    "fr_066: FR-066 Resource Monitor",
    "fr_067: FR-067 Optimized Imports",
    "fr_067a: FR-067a String Optimization",
    "fr_067b: FR-067b PDF Reading Optimization",
    "fr_067c: FR-067c Binary Operations",
    "fr_068: FR-068 Memory Management",
    "fr_069: FR-069 Atomic Writes",
    "fr_070: FR-070 Path Sanitization",
    "fr_071: FR-071 Subprocess Safety",
    "fr_072: FR-072 Input Validation",
    "fr_073: FR-073 Telemetry",
    "fr_074: FR-074 Crash Reports",
    "fr_075: FR-075 Type Safety",
    "fr_076: FR-076 Test Coverage",
    "fr_077: FR-077 Documentation",
    "fr_078: FR-078 Help System",
    "fr_079: FR-079 Update Check",
    "fr_080: FR-080 Plugin System",
    "fr_081: FR-081 Custom Themes",
    "fr_082: FR-082 Export Presets",
    "fr_083: FR-083 Macro Recording",
    "fr_084: FR-084 LRU Cache",
    "fr_085: FR-085 Auto-Complete Engine",
    "fr_086: FR-086 Context Detection",
    "fr_087: FR-087 Completion Provider",
    "fr_088: FR-088 Fuzzy Matching",
    "fr_089: FR-089 UI Widget",
    "fr_090: FR-090 Performance",
    "fr_091: FR-091 Syntax Checker",
    "fr_092: FR-092 Error Detection",
    "fr_093: FR-093 Error Display",
    "fr_094: FR-094 Quick Fixes",
    "fr_095: FR-095 Navigation",
    "fr_096: FR-096 Real-Time Validation",
    "fr_097: FR-097 Rule Engine",
    "fr_098: FR-098 Custom Rules",
    "fr_099: FR-099 Performance",
    "fr_100: FR-100 Template Manager",
    "fr_101: FR-101 Built-In Templates",
    "fr_102: FR-102 Custom Templates",
    "fr_103: FR-103 Template Variables",
    "fr_104: FR-104 Template Engine",
    "fr_105: FR-105 UI Integration",
    "fr_106: FR-106 Template Browser",
    "fr_107: FR-107 Performance",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
